# joshwel.co

./: .gitignore  README.md  bun.lockb  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: deploy.yml
public/: index.html  main.min.css  pgp.asc.txt  site.webmanifest
src/: index.html  main.css
src/ast/: favicon.ai
src/txt/: index.md
src/web/: index.html  main.css
