[tool.poetry]
name = "jcogen"
version = "0.1.0"
description = "Internal content generation code for joshwel.co."
authors = ["Mark Joshwel <mark@joshwel.co>"]
license = "Unlicence"
readme = "README.md"
packages = [{include = "src/gen/engine.py"}]

[tool.poetry.scripts]
jcogen = 'src.gen.engine:main'

[tool.poetry.dependencies]
python = "^3.7"
markdown2 = "^2.4.6"
minify-html = "^0.10.3"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
